outputs_20260326-112231-85b57cd7/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_onxpkxca\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_onxpkxca\src\gtm_tom_3_phase_inverter_pwm.c:110:40: error: 'Ifx_ActiveState_high' undeclared (first use in this function); did you mean 'Ifx_ActiveState'?
  110 |     output[0].polarity               = Ifx_ActiveState_high;             /* HS active high */
      |                                        ^~~~~~~~~~~~~~~~~~~~
      |                                        Ifx_ActiveState
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_onxpkxca\src\gtm_tom_3_phase_inverter_pwm.c:110:40: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_onxpkxca\src\gtm_tom_3_phase_inverter_pwm.c:111:40: error: 'Ifx_ActiveState_low' undeclared (first use in this function); did you mean 'Ifx_ActiveState'?
  111 |     output[0].complementaryPolarity  = Ifx_ActiveState_low;              /* LS active low  */
      |                                        ^~~~~~~~~~~~~~~~~~~
      |                                        Ifx_ActiveState
